--- a/week1/index.html
+++ b/week1/index.html
@@ -18,7 +18,13 @@
   </header>
 
   <main>
-    <p>Notes...</p>
+    <p>This week we will look an app that is
+      going to allow people to write, save, edit, and show a story
+      they write.</p>
+      
+      <p>Find an example below &#128071;</p>
+
+      <a href="exercises/index.html">Exercises / Notes</a>
   </main>
 
   <footer>
@@ -26,10 +32,9 @@
   </footer>
 
 
-  <script>
-    function goBack() {
-      window.history.back();
-    }
+  <script src="../js/main.js"></script>
+  <script src="../js/week1/index.js">
+
   </script>
 </body>
 
