--- a/content/week1/exercises.html
+++ b/content/week1/exercises.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="../../css/styles.css">
-  <link rel="stylesheet" href="../../css/week1/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@ here."></textarea>
 
 
   <script src="../../js/main.js"></script>
-  <script src="../../js/week1/index.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
