--- a/content/week1/index.html
+++ b/content/week1/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../../css/styles.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
       
       <p>Find an example below &#128071;</p>
 
-      <a href="exercises/index.html">Exercises / Notes</a>
+      <a href="exercises.html">Exercises / Notes</a>
   </main>
 
   <footer>
@@ -32,8 +32,8 @@
   </footer>
 
 
-  <script src="../js/main.js"></script>
-  <script src="../js/week1/index.js">
+  <script src="../../js/main.js"></script>
+  <script src="../js/index.js">
 
   </script>
 </body>
